--- a/mimetypes/application/x-kpovmodeler.desktop
+++ b/mimetypes/application/x-kpovmodeler.desktop
@@ -1,7 +1,54 @@
 [Desktop Entry]
 Comment=KPovModeler File
+Comment[af]=kpovmoduleerder lêer
+Comment[ar]=ملف KPovModeler
+Comment[az]=KPovModeler Faylı
+Comment[be]=Файл KPovModeler
+Comment[bg]=KPovModeler файл
+Comment[bs]=KPovModeler datoteka
+Comment[cs]=Soubor KPovModeleru
+Comment[da]=KPovModeler-fil
+Comment[de]=Datei des Povray-Modellierers von KDE
+Comment[el]=Αρχείο KPovModeler
+Comment[eo]=Dosiero de Povray-modelilo
+Comment[es]=Archivo de KPovModeler
+Comment[et]=KPovModeler fail
+Comment[eu]=KPovModeler Fitxategiak
+Comment[fi]=KPovModeler tiedosto
+Comment[fr]=Fichier KPovModeler
+Comment[he]=קובץ KPovModeler
+Comment[hu]=KPovModeler fájl
+Comment[is]=KPovModeler skrá
+Comment[it]=File KPovModeler
+Comment[ja]=KPovModelerファイル
+Comment[lt]=KPovModeler byla
+Comment[lv]=KPovModeler Fails
+Comment[mt]=Fajl KPovModeler
+Comment[nb]=KPovModellerer-fil
+Comment[nl]=KPovModeler Bestand
+Comment[nn]=KPovModeler-fil
+Comment[pl]=Plik KPovModelera
+Comment[pt]=Ficheiro do KPovModeler
+Comment[pt_BR]=Arquivo do KPov
+Comment[ro]=Fişier KPovModeler
+Comment[ru]=файл KPovModeler
+Comment[sk]=Súbor KPovModeler
+Comment[sl]=Datoteka KPovModeler
+Comment[sr]=KPovModeler fajl
+Comment[sv]=Pov-modellfil
+Comment[ta]=KPovModeler §¸¡ôÒ
+Comment[th]=แฟ้มโมเดล KPovModeler
+Comment[tr]=KPovModeler Dosyası
+Comment[uk]=Файл KPovModeler
+Comment[ven]=Faela ya ramodele wa KPov
+Comment[vi]=File KPovModeler
+Comment[xh]=Ifayile yoMfoti we KPov
+Comment[xx]=xx
+Comment[zh_CN]=KPovModeler 文件
+Comment[zh_TW]=KPovModeler 文件
+Comment[zu]=Ifayile yoMumodeli we KPov
 DefaultApp=KPovModeler
-Icon=kpovmodeler
+Icon=kpovmodeler_doc
 MimeType=application/x-kpovmodeler
 Patterns=*.kpm;
 Type=MimeType
