finished Gordon's Machel's doxygen Makefile support. We can continue from here. CCMAIL: gordon.machel@t-online.de
svn path=/trunk/kdelibs/; revision=146650

--- a/interfaces/Makefile.am
+++ b/interfaces/Makefile.am
@@ -1,3 +1,6 @@
 # $Id$
 
 SUBDIRS = ktexteditor kscript kregexpeditor
+
+DOXYGEN_REFERENCES = kdecore kdefx kdeui kparts dcop
+DOXYGEN_EXCLUDE = kscript/sample/*
