--- a/kparts/Makefile.am
+++ b/kparts/Makefile.am
@@ -28,3 +28,4 @@ libkparts_la_METASOURCES = AUTO
 servicetype_DATA = kpart.desktop krop.desktop krwp.desktop browserview.desktop 
 servicetypedir = $(kde_servicetypesdir)
 
+DOXYGEN_REFERENCES = kdecore kdeui kdefx kio
