--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -42,3 +42,5 @@ local-install-files: $(DISTFILES)
 	    || cp $$d/$$file $(DESTDIR)$(datadir)/libtool/libltdl/$$file || :; \
 	  fi; \
 	done
+
+apidox:
