--- a/configure.in.in
+++ b/configure.in.in
@@ -287,3 +287,5 @@ AC_ARG_WITH(distribution,
 ], [kde_distribution_text='compiled sources'])
 AC_DEFINE_UNQUOTED(KDE_DISTRIBUTION_TEXT, "$kde_distribution_text", [Distribution Text to append to OS])
 AC_MSG_RESULT($kde_distribution_text)
+
+KDE_INIT_DOXYGEN([The KDE API Reference], [Version $VERSION])
