--- a/kdeui/Makefile.am
+++ b/kdeui/Makefile.am
@@ -58,7 +58,7 @@ include_HEADERS = kprogress.h kcolordlg.h kcolordialog.h kselect.h \
 		kpanelextension.h kcompletionbox.h ksqueezedtextlabel.h \
 		kcommand.h kwindowlistmenu.h kfontcombo.h kaccelgen.h ktip.h \
 		kdatewidget.h karrowbutton.h kguiitem.h kstdguiitem.h \
-		kstringvalidator.h kaccelmanager.h
+		kstringvalidator.h kaccelmanager.h kwindowinfo.h kpassivepopup.h
 
 # the order of the sources isn't randomly (at least not completly).
 # the order is predictated by the use of X11 header files
@@ -97,7 +97,8 @@ libkdeui_la_SOURCES = \
 		kcommand.cpp kwindowlistmenu.cpp kfontcombo.cpp ktip.cpp \
 		kdatewidget.cpp karrowbutton.cpp kmainwindowiface.cpp \
                 kmainwindowiface.skel kguiitem.cpp kstdguiitem.cpp \
-		kstringvalidator.cpp kactivelabel.cpp kaccelmanager.cpp
+		kstringvalidator.cpp kactivelabel.cpp kaccelmanager.cpp \
+		kwindowinfo.cpp kpassivepopup.cpp
 
 noinst_HEADERS = kdockwidget_private.h klistviewlineedit.h \
 		kdialogbase_priv.h kaboutdialog_private.h kcursor_private.h \
