--- a/kdeprint/filters/ps2pdf.desktop
+++ b/kdeprint/filters/ps2pdf.desktop
@@ -4,7 +4,7 @@ Name[eo]=Konvertilo de Postskripto al PDF
 Name[fr]=Ps2pdf
 Name[pt_BR]=Conversão de PS para PDF
 Name[xx]=xx
-Require=exec:/ps2pdf
+Require=exec:/gs
 Comment=PostScript to PDF converter
 Comment[af]=postscript aan pdf omskakelaar
 Comment[ar]=محول مستندات بوست سكريبت إلى PDF
@@ -18,6 +18,7 @@ Comment[de]=Konvertierung von PostScript- in PDF-Dokumente
 Comment[el]=Μετατροπέας από PostScript σε PDF
 Comment[eo]=Konvertilo de la dokumenttipo PS al PDF
 Comment[es]=Conversor de PostScript a PDF
+Comment[et]=PostScript -> PDF teisendamine
 Comment[eu]=PostScript-etik PDF-ra bihurtailea
 Comment[fi]=Postscriptista PDF muotoon konvertoija
 Comment[fr]=Convertisseur de documents PostScript en PDF
