--- a/kdeprint/configure.in.in
+++ b/kdeprint/configure.in.in
@@ -5,8 +5,8 @@ kde_save_libs="$LIBS"
 LIBS="$all_libraries $USER_LDFLAGS -lcups $LIBDL $LIBSOCKET"
 CFLAGS="$CFLAGS $all_includes $USER_INCLUDES"
 AC_MSG_CHECKING(CUPS version >= $1)
-AC_LANG_SAVE
-AC_LANG_C
+kde_save_link=$ac_link
+ac_link='${CC} $CFLAGS -o conftest conftest.c $LIBS 1>&5'
 cat > conftest.c <<EOF
 #include <cups/cups.h>
 #include <stdio.h>
@@ -31,7 +31,7 @@ else
   ac_have_new_cups="no"
 fi
 rm -f conftest*
-AC_LANG_RESTORE
+ac_link="$kde_save_link"
 CFLAGS="$kde_save_cflags"
 LIBS="$kde_save_libs"
 AC_MSG_RESULT("$ac_have_new_cups")
