--- a/kio/kio/configure.in.in
+++ b/kio/kio/configure.in.in
@@ -12,10 +12,13 @@ dnl runtime systems would conflict (e.g. in KAI C++) (matz)
 test "$GXX" = yes || kde_have_fam=no
 
 if test "$kde_have_fam" = "yes" ; then
+  AC_LANG_SAVE
+  AC_LANG_CPLUSPLUS
   KDE_CHECK_LIB(fam, FAMOpen, [LIBFAM="-lfam"; kde_have_fam=yes],kde_have_fam=no)
   if test $kde_have_fam = yes; then
     AC_DEFINE_UNQUOTED(HAVE_FAM, 1, [Define if your system has libfam])
   fi
+  AC_LANG_RESTORE
 fi
 AC_SUBST(LIBFAM)
 dnl ------------------------------------------------------------------------
