Added "View Page Info"  and "View Frame Info"
This could still use some enhancing in the areas of:

- Gui look
- Info presented
    - Could display the DTD
    - Could display <meta> information
    - Could also display security information
    - Cookies?

Anyone may feel free to hack on this.  Also note that there may still be a
race for the metadata so sometimes it may not populate properly.

svn path=/trunk/kdelibs/; revision=149973

--- a/khtml/Makefile.am
+++ b/khtml/Makefile.am
@@ -26,7 +26,7 @@ kde_module_LTLIBRARIES = khtmlimagepart.la
 
 libkhtml_la_SOURCES = khtmlview.cpp khtml_part.cpp khtml_run.cpp khtml_factory.cpp khtml_settings.cc \
 		      khtml_events.cpp khtml_find.cpp khtml_ext.cpp khtml_pagecache.cpp khtml_iface.skel khtml_iface.cc \
-		      khtml_printsettings.cpp
+		      khtml_printsettings.cpp htmlpageinfo.ui
 
 libkhtml_la_METASOURCES = AUTO
 
