--- a/khtml/khtml_popupmenu.rc
+++ b/khtml/khtml_popupmenu.rc
@@ -13,9 +13,10 @@
  <Action name="copyimagelocation" />
  <Action name="viewimage" />
  <Separator weakSeparator="1" />
- <Action name="security" />
  <Action name="viewDocumentSource" />
  <Action name="viewFrameSource" />
+ <Action name="viewPageInfo" />
+ <Action name="security" />
  <Action name="setEncoding" />
 </Menu>
 </kpartgui>
