updates to packaging from ccheney
svn path=/branches/KDE_3_0_BRANCH/kdelibs/; revision=150404

--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Description: KDE core libraries
 Package: kdelibs4-bin
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, kdelibs4-data (= ${Source-Version})
+Depends: ${shlibs:Depends}, kdelibs4-data (= ${Source-Version}), python
 Provides: kdelibs-bin
 Replaces: kdelibs-bin
 Description: KDE core binaries
