--- a/mimetypes/application/x-karbon.desktop
+++ b/mimetypes/application/x-karbon.desktop
@@ -1,6 +1,7 @@
 # KDE Config File
 [Desktop Entry]
 MimeType=application/x-karbon
+Type=MimeType
 Icon=karbon
 Comment=Karbon14 Document
 Comment[ar]=مستند Karbon14
