Ouch, the name of the file didn't match the MimeType key in it.... -MimeType=application/x-gzip +MimeType=application/x-gzpostscript If this breaks, then this file should just be removed.
svn path=/trunk/kdelibs/; revision=150654

--- a/mimetypes/application/x-gzpostscript.desktop
+++ b/mimetypes/application/x-gzpostscript.desktop
@@ -1,61 +1,15 @@
 [Desktop Entry]
 Encoding=UTF-8
 Comment=Gzipped PostScript File
-Comment[af]=gzip gekompakteerde postscript lêer
-Comment[ar]=ملف بوست سكريبت مضغوط عن طريق Gzip
-Comment[az]=Sıxışdırılmış Postscript Faylı
-Comment[bg]=Комресиран gzip Postscript документ
 Comment[bs]=Gzipovana PostScript datoteka
-Comment[ca]=Fitxer Postscript comprimit amb gzip
-Comment[cs]=Postscriptový soubor komprimovaný gzipem
 Comment[da]=Gzippet PostScript-fil
-Comment[de]=Gzip-komprimierte PostScript-Datei
-Comment[el]=Αρχείο postscript συμπιεσμένο με gzip
-Comment[eo]=Gzip-kunpremita postskripta dosiero
-Comment[es]=Archivo PostScript comprimido en Gzip
-Comment[et]=GZIPiga pakitud PostScript fail
-Comment[eu]=Gzipped Postscript Fitxategia
-Comment[fi]=Gzip pakattu Postscript-tiedosto
-Comment[fr]=Fichier PostScript compacté
-Comment[gl]=Ficheiro Postscript Comprimido con Gzip
-Comment[he]=קובץ Postscript דחוס ע"י Gzip
-Comment[hr]=Gzipirana PostScript datoteka
-Comment[hu]=Gzippelt PostScript fájl
-Comment[id]=File Gzipped Postscript
-Comment[is]=gzip-þjappað Postscript skjal
-Comment[it]=File PostScript compresso con Gzip
-Comment[ja]=GzipされたPostscriptファイル
-Comment[ko]=Gzip으로 압축된 포스트스크립트 파일
-Comment[lt]=Suglaudinta su Gzip Postscript byla
-Comment[lv]=Gzippots Postscript Fails
-Comment[mk]=Gzip-увана PostScript датотека
-Comment[mt]=Fajl Postscript Gzippjat
-Comment[nb]=Gzippet Postscript-fil
-Comment[nl]=Met Gzip gecomprimeerd PostScript-bestand
-Comment[nn]=Gzippa postscript-fil
-Comment[pl]=Skompresowany (gzipem) plik Postcript
-Comment[pt]=Ficheiro PostScript comprimido com GZip
-Comment[pt_BR]=Arquivo Postscript compactado com GZIP
+Comment[nl]=met Gzip gecomprimeerd PostScript-bestand
 Comment[ro]=Fişier PostScript comprimat
-Comment[ru]=Запакованный gzip Postscript документ
-Comment[sk]=GZIP zabalený postskriptový súbor
 Comment[sl]=Postscriptna datoteka, stisnjena z gzip-om
-Comment[sr]=GZipovani PostScript
 Comment[sv]=Gzip-komprimerad Postscript-fil
-Comment[ta]=Gzip ¦ºö¾ Postscript §¸¡ôÒ
-Comment[th]=แฟ้มโพสต์สคริปต์บีบอัดแบบ Gzip
-Comment[tr]=Sıkıştırılmış Postscript Dosyası
-Comment[uk]=Файл PostScript стиснутий gzip
-Comment[ven]=Faela ya tshikiriputi tsha poso ya Gzipped
-Comment[vi]=File Postscript đã được Gzip 
-Comment[xh]=Ifayile yokushicilelwe phantsi okuposwayo kwe Gzipped
-Comment[xx]=xx
-Comment[zh_CN]=Gzip 压缩的 Postscript 文件
-Comment[zh_TW]=Gzip 壓縮的 Postscript 檔案
-Comment[zu]=Ifayile yokushicilelwe phansi Okuposwayo kwe Gzipped
 Hidden=false
 Icon=tgz
-MimeType=application/x-gzip
+MimeType=application/x-gzpostscript
 Patterns=*.ps.gz
 Type=MimeType
 X-KDE-AutoEmbed=true
