-MimeType=image/x-portable-bitmap +MimeType=image/x-portable-greymap
svn path=/trunk/kdelibs/; revision=150656

--- a/mimetypes/image/x-portable-greymap.desktop
+++ b/mimetypes/image/x-portable-greymap.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Type=MimeType
-MimeType=image/x-portable-bitmap
+MimeType=image/x-portable-greymap
 Icon=image
 Patterns=*.pgm;
 Comment=Portable Graymap File Format
@@ -11,9 +11,11 @@ Comment[bs]=Portable Greymap File format
 Comment[cs]=Formát "Portable Graymap File"
 Comment[da]=Portable Graymap Filformat
 Comment[de]=Portierbares Greymap-Format
+Comment[el]=Τύπος Αρχείου Portable Graymap
 Comment[en_GB]=Portable Greymap File Format
 Comment[eo]=Portebla griza grafiko (PGM)
 Comment[es]=Formato de archivo portable Graymap
+Comment[et]=Portable Graymap failivorming
 Comment[eu]=Graymap Fitxategi Formato Eramangarria
 Comment[fi]=Portable Graymap tiedostomuoto
 Comment[fr]=Format Portable Greymap
@@ -22,6 +24,7 @@ Comment[hu]=Portable Graymap fájlformátum
 Comment[it]=Formato Portable Graymap
 Comment[ja]=ポータブルグレイマップファイルフォーマット
 Comment[lt]=Perkeliamas graymap bylų formatas
+Comment[lv]=Pārvietojams Graymap Faila Formāts
 Comment[nl]=overdraagbaar greymap-bestandsformaat
 Comment[nn]=Portable Graymap File-format
 Comment[pt]=Formato Portável de 'Graymaps'
