A new property [PropertyDef::X-KDE-BrowserView-FollowActive] Type=bool
svn path=/trunk/kdelibs/; revision=150764

--- a/kparts/browserview.desktop
+++ b/kparts/browserview.desktop
@@ -88,3 +88,5 @@ Type=QString
 [PropertyDef::X-KDE-BrowserView-ToggableView-NoHeader]
 Type=bool
 
+[PropertyDef::X-KDE-BrowserView-FollowActive]
+Type=bool
