As posted to core-devel some weeks ago:  - moved internal classes to kopenwith_p.h  - cleaned up includes  - removed public unused KApplicationTree::it
svn path=/trunk/kdelibs/; revision=150954

--- a/kio/kfile/Makefile.am
+++ b/kio/kfile/Makefile.am
@@ -37,7 +37,7 @@ include_HEADERS = kfiledialog.h \
 	kdirselectdialog.h kurlbar.h kpropertiesdialog.h
 
 noinst_HEADERS = kfiledialogconf.h config-kfile.h krecentdirs.h kmetaprops.h \
-	kfilebookmarkhandler.h kfilemetainfowidget.h
+	kfilebookmarkhandler.h kfilemetainfowidget.h kopenwith_p.h
 
 libkfile_la_SOURCES = kfiledialogconf.cpp \
 	kfilefiltercombo.cpp \
