--- a/khtml/khtmlimage.desktop
+++ b/khtml/khtmlimage.desktop
@@ -52,7 +52,7 @@ Comment[xx]=xx
 Comment[zh_CN]=可嵌入的图像查看部件
 Comment[zh_TW]=可嵌入的影像查看元件
 Comment[zu]=Ohlanganisekayo Umbonisi Womfanekiso
-MimeType=image/gif;image/x-xpm;image/x-xbm;image/jpeg;image/x-bmp;image/png;image/x-ico;
+MimeType=image/gif;image/x-xpm;image/x-xbm;image/jpeg;image/x-bmp;image/png;image/x-ico;image/x-portable-bitmap;image/x-portable-anymap;image/x-portable-pixmap;image/x-portable-graymap
 Name=Embeddable Image Viewer
 Name[af]=inlegbare beeld aansig
 Name[ar]=عارض الصور القابل للدمج
