KNotifyDialog - The friendly alternative to KControl for configuring your application's events.
This has to be in kfile because it uses KFile for the sound URL requester.

svn path=/trunk/kdelibs/; revision=151059

--- a/kio/kfile/Makefile.am
+++ b/kio/kfile/Makefile.am
@@ -34,10 +34,11 @@ include_HEADERS = kfiledialog.h \
 	kurlcombobox.h kurlrequesterdlg.h kopenwith.h kpropsdlg.h \
 	kicondialog.h kdirsize.h kpreviewwidgetbase.h kimagefilepreview.h kfilesharedlg.h \
 	kfiletreeview.h kfiletreeviewitem.h kfiletreebranch.h \
-	kdirselectdialog.h kurlbar.h kpropertiesdialog.h
+	kdirselectdialog.h kurlbar.h kpropertiesdialog.h knotifydialog.h
 
 noinst_HEADERS = kfiledialogconf.h config-kfile.h krecentdirs.h kmetaprops.h \
-	kfilebookmarkhandler.h kfilemetainfowidget.h kopenwith_p.h
+	kfilebookmarkhandler.h kfilemetainfowidget.h kopenwith_p.h \
+	knotifydialog_private.h 
 
 libkfile_la_SOURCES = kfiledialogconf.cpp \
 	kfilefiltercombo.cpp \
@@ -50,7 +51,7 @@ libkfile_la_SOURCES = kfiledialogconf.cpp \
 	kurlbar.cpp kmetaprops.cpp\
 	kfiletreeview.cpp kfiletreeviewitem.cpp kfiletreebranch.cpp \
 	kdirselectdialog.cpp kfilebookmarkhandler.cpp \
-	kfilemetainfowidget.cpp
+	kfilemetainfowidget.cpp knotifydialog.cpp
 
 EXTRA_DIST = NOTES
 
