debian packaging updates
svn path=/branches/KDE_3_0_BRANCH/kdelibs/; revision=151078

--- a/debian/rules
+++ b/debian/rules
@@ -122,7 +122,7 @@ clean: debian-clean
 		$(MAKE) distclean; \
 	fi
 
-	#if test -d CVS; then \
+	if test -d CVS; then \
 		$(MAKE) -f admin/Makefile.common cvs-clean ;\
 	fi
 
