added mswin *.url file entry
svn path=/trunk/kdelibs/; revision=151755

--- a/mimetypes/application/Makefile.am
+++ b/mimetypes/application/Makefile.am
@@ -14,7 +14,7 @@ data_DATA = x-dvi.desktop x-tex-gf.desktop x-gzip.desktop \
 	x-python.desktop x-python-bytecode.desktop \
 	x-bzip.desktop x-bzip2.desktop mspowerpoint.desktop \
 	msexcel.desktop smil.desktop x-rar.desktop x-zoo.desktop \
-	x-tzo.desktop x-lzop.desktop \
+	x-tzo.desktop x-lzop.desktop x-mswinurl.desktop \
 	x-applixword.desktop x-applixspread.desktop x-applixgraphics.desktop \
 	x-truetype-font.desktop msexcel2.desktop \
 	x-shockwave-flash.desktop x-designer.desktop x-linguist.desktop \
