--- a/mimetypes/application/x-cda.desktop
+++ b/mimetypes/application/x-cda.desktop
@@ -3,5 +3,5 @@ Encoding=UTF-8
 Type=MimeType
 Comment=CD Audio
 MimeType=application/x-cda
-Icon=cdaudio_unmount
+Icon=cdtrack
 Patterns=*.cda;*.CDA
