Introducing KAudioConverter Features * converting xxx (mp3, ogg...) -> raw data * samplerate can be specified * automatic mimetype detection * remote and local url support * automatic streaming
if you connect to the signal newData(), data
pipelining blocks until slotNewData() is exited
(hi jowenn! ;)

BUGS
1. KAudioConverter::setup() crashes, let's ask stw
2. just tried over smb:/ seems to crash :/
   tried with kaboodle, too.. crashes also...
   It's KIOInputStream's fault... what happened? matze?

svn path=/trunk/kdelibs/; revision=151878

--- a/arts/kde/Makefile.am
+++ b/arts/kde/Makefile.am
@@ -2,18 +2,20 @@ SUBDIRS = .
 INCLUDES = -I$(includedir)/arts \
            -I$(top_builddir)/arts/kde/lib \
            -I$(top_srcdir) $(all_includes)
-lib_LTLIBRARIES  	    =	libartskde.la
-libartskde_la_SOURCES	    =	artskde.cc kioinputstream_impl.cpp kplayobject.cc \
-				kplayobjectfactory.cc kartsfloatwatch.cpp kartsdispatcher.cc \
-				kartsserver.cpp
-libartskde_la_LIBADD        =   $(LIB_KSYCOCA) -lqtmcop -lsoundserver_idl
-libartskde_la_LDFLAGS       =   $(all_libraries) -no-undefined -version-info 1:0
-libartskde_la_METASOURCES   =	AUTO
+	
+lib_LTLIBRARIES = libartskde.la
+libartskde_la_SOURCES = artskde.cc kioinputstream_impl.cpp kplayobject.cc \
+						kplayobjectfactory.cc kartsfloatwatch.cpp kartsdispatcher.cc \
+						kartsserver.cpp kdatarequest_impl.cpp kaudioconverter.cc
+libartskde_la_LIBADD = $(LIB_KSYCOCA) -lqtmcop -lsoundserver_idl
+libartskde_la_LDFLAGS = $(all_libraries) -no-undefined -version-info 1:0
+libartskde_la_METASOURCES =	AUTO
 
-artskdeincludedir	    =	$(includedir)/arts
-artskdeinclude_HEADERS      = 	kplayobject.h kplayobjectfactory.h kartsfloatwatch.h artskde.h kartsdispatcher.h kartsserver.h
+artskdeincludedir = $(includedir)/arts
+artskdeinclude_HEADERS = kplayobject.h kplayobjectfactory.h kartsfloatwatch.h artskde.h kartsdispatcher.h kartsserver.h
 
 $(srcdir)/kioinputstream_impl.cpp: artskde.h
+$(srcdir)/kdatarequest_impl.cpp: artskde.h
 $(srcdir)/kartsfloatwatch.cpp: artskde.h
 artskde.cc: artskde.h
 artskde.mcoptype: artskde.h
@@ -23,9 +25,11 @@ artskde.h: $(top_srcdir)/arts/kde/artskde.idl $(MCOPIDL)
 
 DISTCLEANFILES = artskde.cc artskde.h artskde.mcoptype artskde.mcopclass
 
-check_PROGRAMS = kiotest kiotestslow
+check_PROGRAMS = kiotest kiotestslow kconverttest
 kiotest_SOURCES = kiotest.cc
 kiotestslow_SOURCES = kiotestslow.cc
+kconverttest_SOURCES = kconverttest.cc
 
-kiotest_LDADD	= libartskde.la -lqtmcop -lkmedia2 -lsoundserver_idl
-kiotestslow_LDADD	= $(kiotest_LDADD)
+kiotest_LDADD = libartskde.la -lqtmcop -lkmedia2 -lsoundserver_idl
+kiotestslow_LDADD = $(kiotest_LDADD)
+kconverttest_LDADD = $(kiotest_LDADD)
