--- a/kioslave/mycomputer/kdedmodule/Makefile.am
+++ b/kioslave/mycomputer/kdedmodule/Makefile.am
@@ -1,7 +1,7 @@
 kde_module_LTLIBRARIES = kded_mountwatcher.la
 
 INCLUDES = $(all_includes)
-kded_mountwatcher_la_SOURCES = mountwatcher.cpp mountwatcher.skel
+kded_mountwatcher_la_SOURCES = mountwatcher.cpp mountwatcher.skel disklist.cpp disks.cpp
 kded_mountwatcher_la_LDFLAGS = $(all_libraries) -module -avoid-version
 kded_mountwatcher_la_LIBADD = $(LIB_KSYCOCA)
 
