--- a/kioslave/mycomputer/mimetypes/Makefile.am
+++ b/kioslave/mycomputer/mimetypes/Makefile.am
@@ -1,4 +1,5 @@
-mimetype_DATA = floppy_mounted.desktop floppy_unmounted.desktop
+mimetype_DATA = floppy_mounted.desktop floppy_unmounted.desktop floppy5_unmounted.desktop floppy5_mounted.desktop \
+		hdd_mounted.desktop hdd_unmounted.desktop cdrom_mounted.desktop cdrom_unmounted.desktop
 #folder.desktop printer.desktop class.desktop manager.desktop jobs.desktop 
 mimetypedir = $(kde_mimedir)/kdedevice
 
