works in konqy, except in the sidebar. The mount points are only read when the mountwatcher module is loaded
svn path=/trunk/kdelibs/; revision=152454

--- a/kioslave/mycomputer/Makefile.am
+++ b/kioslave/mycomputer/Makefile.am
@@ -14,4 +14,4 @@ kdelnk_DATA = mycomputer.protocol
 kdelnkdir = $(kde_servicesdir)
 
 
-subdirs=. kdedmodule mimetypes
+SUBDIRS=. kdedmodule mimetypes
