--- a/mimetypes/application/x-pkcs7-signature.desktop
+++ b/mimetypes/application/x-pkcs7-signature.desktop
@@ -1,10 +1,11 @@
 [Desktop Entry]
 Encoding=UTF-8
 Type=MimeType
-MimeType=application/x-pkcs7-signature
+MimeType=application/pkcs7-signature
 Icon=signature
 Patterns=*.p7s;*.P7S
 Comment=Detached S/MIME signature
+Comment[af]=ontkoppel s/mime handtekening
 Comment[ar]=توقيع S/MIME المستقل
 Comment[bg]=Отделена S/MIME сигнатура
 Comment[bs]=Odvojeni S/MIME potpis
@@ -14,10 +15,12 @@ Comment[de]=S/MIME-Signatur
 Comment[el]=Αποκολλημένη υπογραφή S/MIME
 Comment[eo]=Deligita S/MIME-subskribo
 Comment[es]=Firma suelta S/MIME
+Comment[et]=Eraldiseisev S/MIME signatuur
 Comment[eu]=S/MIME sinadura desuztartua
 Comment[fi]=Liitetty S/MIME allekirjoitus
 Comment[fr]=Signature S/MIME détachée
 Comment[he]=חתימת S/MIME מופרדת
+Comment[hr]=Odvojeni S/MIME potpisi
 Comment[hu]=Leválasztott S/MIME-aláírás
 Comment[it]=Firma S/MIME separata
 Comment[ja]=切り離されたS/MIME 署名
@@ -33,6 +36,7 @@ Comment[sl]=Izločen podpis S/MIME
 Comment[sv]=Frånkopplad S/MIME-signatur
 Comment[th]=แยกลายเซ็น S/MIME ที่แนบมา
 Comment[tr]=Ayrılmış S/MIME imzası
+Comment[uk]=Вікріплений підпис S/MIME
 Comment[ven]=Tsaino yo tumanywaho ya S/MIME
 Comment[vi]=Lọc chữ kí S/MIME 
 Comment[xx]=xx
