--- a/kio/tests/Makefile.am
+++ b/kio/tests/Makefile.am
@@ -49,13 +49,13 @@ ksycocatest_SOURCES = ksycocatest.cpp
 kdcopcheck_SOURCES = kdcopcheck.cpp
 getalltest_SOURCES = getalltest.cpp
 kruntest_SOURCES = kruntest.cpp
-kdirwatchtest_SOURCES = kdirwatchtest.cpp kdirwatchtest.h
+kdirwatchtest_SOURCES = kdirwatchtest.cpp
 ktradertest_SOURCES = ktradertest.cpp
 kmimemagictest_SOURCES = kmimemagictest.cpp
 kfiltertest_SOURCES = kfiltertest.cpp
 kscantest_SOURCES = kscantest.cpp
-kdirlistertest_SOURCES = kdirlistertest.cpp kdirlistertest.h
-previewtest_SOURCES = previewtest.cpp previewtest.h
+kdirlistertest_SOURCES = kdirlistertest.cpp
+previewtest_SOURCES = previewtest.cpp
 ktartest_SOURCES = ktartest.cpp
 kziptest_SOURCES = kziptest.cpp
 metatest_SOURCES = metatest.cpp
