--- a/kioslave/http/kcookiejar/Makefile.am
+++ b/kioslave/http/kcookiejar/Makefile.am
@@ -10,7 +10,7 @@ lib_LTLIBRARIES = kcookiejar.la
 
 kcookiejar_la_SOURCES = kcookiejar.cpp kcookieserver.cpp \
 			kcookieserver.skel kcookiewin.cpp \
-			kcookiewin.h main.cpp 
+			main.cpp 
 kcookiejar_la_METASOURCES = AUTO
 kcookiejar_la_LDFLAGS = $(all_libraries) -module -avoid-version
 kcookiejar_la_LIBADD = $(LIB_KIO)
