removing usages of undefined variables. These are empty, but confusing
svn path=/trunk/kdelibs/; revision=154299

--- a/arts/kde/Makefile.am
+++ b/arts/kde/Makefile.am
@@ -20,6 +20,7 @@ $(srcdir)/kartsfloatwatch.cpp: artskde.h
 artskde.cc: artskde.h
 artskde.mcoptype: artskde.h
 artskde.mcopclass: artskde.h
+MCOPINC = -I$(srcdir)
 artskde.h: $(top_srcdir)/arts/kde/artskde.idl $(MCOPIDL)
 	    $(MCOPIDL) -I$(includedir)/arts -I$(includedir)/arts -t $(MCOPINC) $(top_srcdir)/arts/kde/artskde.idl
 
