--- a/dcop/KDE-ICE/Makefile.am
+++ b/dcop/KDE-ICE/Makefile.am
@@ -1,5 +1,5 @@
 
-AM_CFLAGS = $(STD_DEFINES) -DICE_t -DTRANS_SERVER -DTRANS_CLIENT -DUNIXCONN -DANSICPP
+AM_CFLAGS = -DICE_t -DTRANS_SERVER -DTRANS_CLIENT -DUNIXCONN -DANSICPP
 INCLUDES = $(all_includes)
 
 noinst_LTLIBRARIES = libkICE.la
