--- a/kdoctools/Makefile.am
+++ b/kdoctools/Makefile.am
@@ -28,7 +28,7 @@ xml2man_SOURCES = xml2man.cpp $(FILTER_sources)
 xslt_pure.o: xslt.cpp
 	-rm -f xslt_pure.cpp
 	$(LN_S) $(srcdir)/xslt.cpp xslt_pure.cpp
-	$(CXXCOMPILE) -DSIMPLE_XSLT -c xslt_pure.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) -DSIMPLE_XSLT $(INCLUDES) $(CPPFLAGS) $(AM_CPPFLAGS) $(CXXFLAGS) -c xslt_pure.cpp
 
 bin_SCRIPTS = xmlizer kdb2html checkXML
 
