--- a/khtml/html/Makefile.am
+++ b/khtml/html/Makefile.am
@@ -48,6 +48,5 @@ SRCDOC_DEST=$(kde_htmldir)/en/kdelibs/khtml
 ## generate lib documentation 
 srcdoc:
 	$(mkinstalldirs) $(SRCDOC_DEST)
-	kdoc -H -d $(SRCDOC_DEST) kdecore \
-	         $(include_HEADERS) -lqt
+	kdoc -H -d $(SRCDOC_DEST) kdecore -lqt
 
