Added Fortran mimetype
svn path=/trunk/kdelibs/; revision=154491

--- a/kdeprint/filters/enscript.desktop
+++ b/kdeprint/filters/enscript.desktop
@@ -28,6 +28,7 @@ Comment[eu]=Enscript textu Iragazki
 Comment[fi]=Enscript tekstisuodin
 Comment[fr]=Filtre de texte Enscript
 Comment[he]=מסנן טקסט Enscript
+Comment[hr]=Enscript filter teksta
 Comment[hu]=Enscript szövegszűrő
 Comment[is]=Enscript textasía
 Comment[it]=Filtro di testi Enscript
@@ -58,5 +59,5 @@ Comment[xx]=xx
 Comment[zh_CN]=Enscript 文本过滤程序
 Comment[zh_TW]=Enscript 文字檢視器
 Comment[zu]=Icebo lokuhlanza lokubhaliweyo kwashicilelwa phantsi
-MimeTypeIn=text/html,text/plain,text/sgml,text/x-c++hdr,text/x-c++src,text/x-chdr,text/x-csrc,text/x-java,text/x-makefile,text/x-pascal,text/x-perl,text/x-python,text/x-tcl,text/x-tex,text/xml
+MimeTypeIn=text/html,text/plain,text/sgml,text/x-c++hdr,text/x-c++src,text/x-chdr,text/x-csrc,text/x-java,text/x-makefile,text/x-pascal,text/x-perl,text/x-python,text/x-tcl,text/x-tex,text/xml,text/x-fortran
 MimeTypeOut=application/postscript
