Add .rtf as native extension - useful when exporting to rtf in koffice, it adds the extension automatically. I think this only makes sense for Windows-oriented mimetypes.
svn path=/trunk/kdelibs/; revision=154502

--- a/mimetypes/text/rtf.desktop
+++ b/mimetypes/text/rtf.desktop
@@ -48,3 +48,6 @@ Comment[zu]=Ifomathi Yokubhaliweyo Okubalulekile
 Icon=wordprocessing
 Type=MimeType
 Patterns=*.rtf;*.RTF;
+[Property::X-KDE-NativeExtension]
+Type=QString
+Value=.rtf
