renamed _DATA to _DATAFILES as Michael says it makes problems with his automake 1.4
svn path=/trunk/kdelibs/; revision=154669

--- a/kimgio/Makefile.am
+++ b/kimgio/Makefile.am
@@ -34,6 +34,6 @@ EXTRA_DIST = netpbm.cpp netpbm.h
 servicedir = $(kde_servicesdir)
 service_DATA = png.kimgio xpm.kimgio bmp.kimgio gif.kimgio pnm.kimgio xbm.kimgio \
                jpeg.kimgio xv.kimgio krl.kimgio eps.kimgio \
-               $(KIMGIO_TIFF_DATA) ico.kimgio
+               $(KIMGIO_TIFF_DATAFILES) ico.kimgio
 
 
