--- a/kimgio/configure.in.in
+++ b/kimgio/configure.in.in
@@ -2,8 +2,8 @@ KDE_CHECK_KIMGIO
 
 if test -n "$LIBTIFF"; then
 KIMGIO_TIFF_MODULE="kimg_tiff.la kimg_g3.la"
-KIMGIO_TIFF_DATA="tiff.kimgio g3.kimgio"
+KIMGIO_TIFF_DATAFILES="tiff.kimgio g3.kimgio"
 fi
 AC_SUBST(KIMGIO_TIFF_MODULE)
-AC_SUBST(KIMGIO_TIFF_DATA)
+AC_SUBST(KIMGIO_TIFF_DATAFILES)
 
