all_includes last
svn path=/trunk/kdelibs/; revision=155185

--- a/libkmid/tests/Makefile.am
+++ b/libkmid/tests/Makefile.am
@@ -1,5 +1,5 @@
 
-INCLUDES = $(all_includes) -I$(srcdir)/..
+INCLUDES = -I$(srcdir)/.. $(all_includes)
 
 noinst_PROGRAMS = ctest apitest notesoff
 
