--- a/mimetypes/text/Makefile.am
+++ b/mimetypes/text/Makefile.am
@@ -3,7 +3,7 @@ data_DATA = x-c++src.desktop x-c++hdr.desktop x-csrc.desktop x-java.desktop \
 	english.desktop x-makefile.desktop x-moc.desktop x-pascal.desktop \
 	x-tcl.desktop x-tex.desktop html.desktop plain.desktop x-chdr.desktop \
 	rtf.desktop sgml.desktop xml.desktop css.desktop x-vcard.desktop \
-	x-vcalendar.desktop x-diff.desktop x-python.desktop x-perl.desktop x-log.desktop \
+	x-vcalendar.desktop x-diff.desktop x-objcsrc.desktop x-python.desktop x-perl.desktop x-log.desktop \
 	x-bibtex.desktop rdf.desktop rss.desktop calendar.desktop x-lyx.desktop x-adasrc.desktop \
 	x-csv.desktop x-latex.desktop x-xslfo.desktop x-xslt.desktop vnd.wap.wml.desktop
 
